# modelrouter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: routes.example.yaml  routes.portal.example.yaml
docs/: architecture.md  image_router_design.md  plan.md  roadmap.md
experiments/exp01_cpu_refit/: report.md  run.py
experiments/exp01_cpu_refit/results/: refit.json
experiments/exp01_gpu_scale/: modal_app.py  report.md  run_sweep.py
experiments/exp01_gpu_scale/results/: oracle_3tier.json  oracle_3tier_gpucost.json  sweep_3tier.json  sweep_3tier_gpucost.json  sweep_pair.json  sweep_pair_gpucost.json
experiments/exp02_policy_sweep/: build_bundle.py  report.md  run.py
experiments/exp02_policy_sweep/results/: results.json  scores_bundle.joblib
experiments/exp02_vllm_bench/: README.md  modal_app.py  report.md
experiments/exp02_vllm_bench/results/: load_bench.json  vllm_bench.json
experiments/exp03_commercial_api/: report.md  run.py  score_openai.py
experiments/exp03_commercial_api/results/: results.json
experiments/exp03_live_e2e/: report.md  run.py
experiments/exp03_live_e2e/results/: results.json  traces.jsonl
experiments/exp04_gpu_scale/: modal_app.py  report.md  run_sweep.py
experiments/exp04_gpu_scale/results/: refit-0.6b-gpu.json  refit-4b-gpu.json  scores_bundle_gpu.joblib  scores_bundle_pair.joblib
experiments/exp04_task_agnostic/: README.md  run.py
experiments/exp05_freeform/: README.md  run.py  score_gsm8k.py
experiments/exp05_vllm_bench/: modal_app.py  report.md
experiments/exp06_commercial_api/: report.md  score_openai.py
experiments/exp06_image_vibe_routing/: README.md  run.py
src/modelrouter/: __init__.py  backends.py  cli.py  costs.py  data.py  dispatch.py  eval.py  gateway.py  image_routing.py  learning.py  refit.py  routing.py  runtime.py  scoring.py  scoring_gateway.py  serve.py  sweep.py
src/portal_dispatch/: __init__.py  backends.py  cli.py  data.py  eval.py  gateway.py  refit.py  routing.py  runtime.py  serve.py  sweep.py  tracing.py
tests/: test_costs.py  test_dispatch.py  test_gateway.py  test_image_routing.py  test_ops.py  test_scoring_gateway.py  test_serve.py
(+5 files in other folders)
